Cibyl (17)
	* Implemented less pessimistic adding of functions to the call
	table. Relocation information is now used to add only functions which
	can be in the call table

	* Some bugs in the fixup of the ELF symbol sizes has been fixed: it was
	always done on the functions, and the last function was not fixed
	up. The size has also been corrected to include the last instruction
	(usually a delay slot instruction)

	* 64-bit compile fixes: cibyl-syscalls.db is now in native byteorder
	and also different-sized on 32- and 64-bit platforms

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (16)
	* The syscall wrapper generator has now been integrated into the C++
	translator and therefore in the cibyl-mips2java step. The Makefile
	build rules have been changed to accomodate this, and the src/
	directory is now deprecated

	* Handle lables to instructions in delay slots safely and emit a
	warning for it (should never happen). Still just in the C++
	translator. Thanks to Eran Netanel for finding and debugging this

	* Added code to handle tail-call optimizations (jumps to other
	functions). This is still just in the C++ translator.

	* Better warning/error messages

	* Re-implemented most parts of the translator in C++. This
	improves compilation performance quite a bit and the bottleneck
	is now the Jasmin step. Not all optimizations are implemented in
	the C++ version yet. cibyl-mips2java will automatically use the
	C++ translator providing no optimizations are selected.

	The translation step is no longer the bottleneck, Jasmin now takes
	most time. With the new translator, Sarien compiles in around 20
	seconds totally instead of over one minute.

	* Add disabling of function pruning to workaround Cibyl bugs triggered
	by some versions of GCC

	* Check malloc return value in strdup

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sun Mar 16 08:38:42 CET 2008

Cibyl (15)
	* Fixed a bug with callbacks being published but not registered -